Fix: Fix button keys not aligned properly

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@
 
 * {
   margin: 0;
+  padding: 0;
   line-height: calc(1em + 0.5rem);
 }
 
@@ -87,13 +88,21 @@ main {
 }
 
 button {
+  text-align: center;
   cursor: pointer;
   outline: none;
   border: none;
   background: transparent;
   width: 100px;
   height: 50px;
-  /* border: 0.1rem solid var(--primary); */
+  font-size: 1.25rem;
+  border: 0.1rem solid var(--primary);
+  border-radius: 0.25rem;
+  transition: 0.5s ease;
+}
+
+button:hover {
+  background-color: var(--secondary);
 }
 
 .keys {
@@ -102,9 +111,10 @@ button {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 1rem;
   gap: 0.25rem;
 }
 
 .span-two {
-  width: 200px;
+  width: 205px;
 }
